its perfectly ready

--- a/index.html
+++ b/index.html
@@ -113,8 +113,18 @@
         </div>
       </div>
     </div>
-
+    <div id="winner" class="container"></div>
     <button>Roll</button>
+
+    <div class="score-board container">
+      <div id="score-heading">
+        <h2>Scores</h2>
+      </div>
+      <div id="score-value">
+        <div class="score one"></div>
+        <div class="score two"></div>
+      </div>
+    </div>
   </body>
   <script src="jquery-3.6.0.js"></script>
 
